tests/eval/exp/good/builtin-div.scilla
(* Expected result: 120 *)
let f = fun (z : Int32) =>
    let b = Int32 40 in
    fun (c : Int32) =>
    	let t = builtin div b c in
	builtin add z t
in
let a = Int32 100 in
let b = Int32 2 in
let c = f a b in
let d = Int32 1 in
let e = Int32 0 in
let g = builtin mul d e in
let h = Uint32 1 in
let i = Uint32 0 in
builtin mul h i



